--- a/css/creative.css
+++ b/css/creative.css
@@ -402,6 +402,15 @@ img::-moz-selection {
   color: white;
   background: transparent;
 }
+img.peque{
+  width: 50px; height: 50px;
+}
+img.mediana{
+  width: 100px; height: 100px;
+}
+img.grande{
+  width: 200px; height: 200px;
+}
 body {
   webkit-tap-highlight-color: #222222;
 }
